Fix issues with recovering autosave files

1) X-KDE-NativeExtension can be empty, in that case take mime->mainExtension.

Otherwise our autosave files are called .autosave, and that's not something
the filter's mime detection can handle

2) don't overwrite autosave files when running multiple unnamed modified
documents

3) tag the autosave files with the pid and use dbus to check which processes
that have autosave files are still active; don't offer to recover those

4) show the autosave files in a nice dialog with the ora/odf thumbnail
as a preview, and offer to recover them all.

REVIEW:104892
BUG:299611